# Atomix

./: .gitignore  Atomix.py  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  fix_lints.py  fix_lints2.py  patch_atomix.py  patch_resets.py  pyproject.toml  setup.py  test_errors.txt  test_output.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python-package.yml  test.yml
atomix_stm/: __init__.py  api.py  coordinator.py  core.py  exceptions.py  locks.py  persistent.py  primitives.py  ref.py  transaction.py  versioning.py
benchmarks/: README.md  benchmark_stm.py  compare_locks_vs_stm.py
docs/: COMPARISON.md  TUTORIAL.md
examples/: basic_usage.py
examples/ecosystem/: monitoring.py  structured_concurrency.py
examples/web_frameworks/: fastapi_app.py  flask_app.py
tests/: test_advanced_bugs.py  test_api_regressions.py  test_core_regressions.py  test_deep_evaluation.py  test_hardening_regressions.py  test_lock_regressions.py  test_primitive_regressions.py  test_reaper_regressions.py  test_stm.py  test_stm_advanced.py  test_stm_concurrency.py  test_v41_fixes.py  test_v42_fixes.py  test_v43_fixes.py  test_v4_fixes.py
