[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atomix-stm"
version = "3.1.0"
authors = [
  { name="Atomix STM Maintainers", email="maintainers@atomix-stm.org" },
]
description = "Production-grade Software Transactional Memory for Python 3.13+"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
]
dependencies = [
    "psutil>=5.9.0",
]

[project.urls]
"Homepage" = "https://github.com/JohnMikron/Atomix"
"Bug Tracker" = "https://github.com/JohnMikron/Atomix/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["atomix_stm*"]
